--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,30 @@
+/* Navbar */
+.navigation-bar a{
+  color: white;
+  text-decoration: none;
+  margin-left: 20px;
+
+  transition: 0.2s;
+}
+
+.navigation-bar a:hover{
+  color: darkgray;
+}
+
+/* Footer */
+
+.footer{
+  background-color: #212529 ;
+  color: white;
+  /* position:absolute;
+  left:0;
+  bottom:0;
+  right:0; */
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
 /* Admin Page styling */
 .admin__container{
   display: flex;
@@ -45,4 +72,76 @@
 
 .admin__product-img{
   width: 100px;
+}
+
+/* Home, list of products */
+.home__list-of-products{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  width: 100%;
+}
+
+.home__signel-product{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+}
+
+.home__btn{
+  margin-left: 10px;
+}
+
+
+.home__product-img{
+  width: 150px;
+  height: 150px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Product details */
+
+.product-details__header{
+  text-align: center;
+  margin: 15px;
+}
+
+
+.product-details{
+  margin-left:auto;
+  margin-right: auto;
+  width: 500px;
+  text-align: center;
+  border: #212529 solid 1px;
+  border-radius: 8px;
+  padding: 15px;
+}
+
+
+.product-detail__title{
+  font-size: xx-large;
+  font-weight: 700;
+}
+
+.product-detail__price{
+  font-weight: 600;
+}
+
+.product-details img{
+  width: 200px;
+}
+
+.product-details button{
+  margin-left: 10px;
+  background-color: #0d6efd;
+  color: white;
+  border: none;
+  padding: 6px;
+  border-radius: 5px;
+
+  transition: 0.3s;
+}
+
+.product-details button:hover{
+  background-color: #165cc6;
 }
