--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
+:root{
+  --dashboard-sidebar-color : rgb(69, 69, 72);
+  --secondary-sidevar-color: #DDE0E5;
+  --admin-user-sidebar-font-color : white;
+
+  --main-dark-color : #212529;
+  --button-color-light-blue:  #0d6efd;
+  --button-color-after-hover: #165cc6;
+
+}
+
 /* Navbar */
 .navigation-bar a{
   color: white;
@@ -11,10 +22,45 @@
   color: darkgray;
 }
 
+/* Hero image */
+.hero-img {
+  height: 70vh;
+  background-image: url(../src/img/headerImage3.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding: 0rem 0rem 0rem 8rem;  
+}
+
+
+.hero-text h1{
+  font-size: 50px;
+  font-weight: 800;
+  -webkit-text-stroke: 2px white;
+}
+
+.hero-text p{
+  font-size: 20px;
+  font-weight: 600;
+  background-color: white;
+  padding: 5px;
+}
+
 /* Footer */
 
+.main-container{
+  min-height: 90vh;
+}
+
 .footer{
-  background-color: #212529 ;
+  background-color: var(--main-dark-color) ;
   color: white;
   /* position:absolute;
   left:0;
@@ -22,45 +68,83 @@
   right:0; */
   display: flex;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 10px;
+}
+
+/* search bar */
+.search-bar{
+  border-radius: 5px;
+  margin-left: 5px;
+  margin-bottom: 5px;
+  border-style: solid;
+  border-color: var(--main-dark-color);
+  border-width: 1px;
+  padding-left: 5px;
+}
+
+/* sort bar */
+.sort-bar{
+  border-radius: 5px;
+  margin-left: 5px;
+  margin-bottom: 5px;
+  border-style: solid;
+  border-color: var(--main-dark-color);
+  border-width: 1px;
+  padding-left: 5px;
 }
 
 /* Admin Page styling */
 .admin__container{
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .admin__sidebar{
-  background-color: cadetblue;
+  background-color: var(--dashboard-sidebar-color);
+  color: var(--admin-user-sidebar-font-color);
   flex: 1;
   padding: 1rem;
 
 }
 
 .admin__main-content{
-  background-color: darkgray;
+  background-color: var(--secondary-sidevar-color);
   flex: 2;
   padding: 1rem;
+}
+
+.dashboard__links{
+  list-style-type: none;
+}
+
+.dashboard__links a{
+  text-decoration: none;
+  color: white;
+}
+
+.dashboard__links a:hover{
+  color: darkgray;
+  cursor: pointer;
+
+  transition: 0.3s;
 }
 
 /* User sidebar */
 .user__container{
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .user__sidebar{
-  background-color: cadetblue;
+  background-color: var(--dashboard-sidebar-color);
+  color: var(--admin-user-sidebar-font-color);
   flex: 1;
   padding: 1rem;
 
 }
 
 .user__main-content{
-  background-color: darkgray;
+  background-color: var(--secondary-sidevar-color);
   flex: 2;
   padding: 1rem;
 }
@@ -76,9 +160,11 @@
 
 /* Home, list of products */
 .home__list-of-products{
-  display: grid;
+  /* display: grid;
   grid-template-columns: auto auto auto;
-  width: 100%;
+  width: 100%; */
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .home__signel-product{
@@ -112,7 +198,7 @@
   margin-right: auto;
   width: 500px;
   text-align: center;
-  border: #212529 solid 1px;
+  border: var(--main-dark-color) solid 1px;
   border-radius: 8px;
   padding: 15px;
 }
@@ -133,7 +219,7 @@
 
 .product-details button{
   margin-left: 10px;
-  background-color: #0d6efd;
+  background-color: var(--button-color-light-blue);
   color: white;
   border: none;
   padding: 6px;
@@ -143,7 +229,7 @@
 }
 
 .product-details button:hover{
-  background-color: #165cc6;
+  background-color: var(--button-color-after-hover);
 }
 
 /* Search bar */
@@ -153,4 +239,74 @@
   align-items: center;
   justify-content: center;
   margin: 15px 0;
+}
+
+/* Register */
+.register__container{
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  max-width: 800px ;
+}
+
+.register__btn{
+  display: flex;
+  justify-content: center;
+}
+
+/* Contact us */
+.contact__container{
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  max-width: 800px ;
+}
+
+.contact-btn{
+  display: flex;
+  justify-content: center;
+}
+
+/* Login */
+.login-form{
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  max-width: 800px ;
+}
+
+.login-form__btn{
+  display: flex;
+  justify-content: center;
+}
+
+/* Products List in admin */
+.products__table{
+  max-width: 700px;
+  /* display: flex; */
+}
+
+#product-detail__edit:hover{
+  color: dimgrey;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#product-detail__delete:hover{
+  color: crimson;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+#product-add{
+  font-size: larger;
+}
+
+#product-add:hover{
+  color: dimgrey;
+  cursor: pointer;
+  transition: 0.3s;
 }
