--- a/src/index.css
+++ b/src/index.css
@@ -315,6 +315,10 @@
   justify-content: center;
 }
 
+.validation-msg{
+  color: crimson;
+}
+
 /* Contact us */
 .contact__container{
   width: 80%;
