--- a/src/index.css
+++ b/src/index.css
@@ -381,9 +381,10 @@
   max-width: 800px ;
 }
 
-.login-form__btn{
+.login-form__btns{
   display: flex;
   justify-content: center;
+  gap: 15px
 }
 
 /* Products List in admin */
